# DouyinLiveRecorder

./: .gitignore  Dockerfile  StopRecording.vbs  demo.py  docker-compose.yaml  ffmpeg_install.py  gui.pyw  i18n.py  index.html  main.py  msg_push.py  pyproject.toml  requirements.txt
config/: config.ini
src/: __init__.py  ab_sign.py  config_manager.py  ffmpeg_service.py  file_manager.py  initializer.py  notification_service.py  proxy.py  recorder_service.py  room.py  spider.py  state_manager.py  stream.py  utils.py  weverse_auth.py
src/http_clients/: async_http.py  sync_http.py
src/platform_adapters/: __init__.py  adapter_factory.py  base_adapter.py  domestic.py  overseas.py
